# webserv

./: CMakeLists.txt  Client.cpp  Client.hpp  Config.hpp  ErrPage.cpp  ErrPage.hpp  EventSelector.cpp  EventSelector.hpp  FdHandler.cpp  FdHandler.hpp  HttpMessage.cpp  HttpMessage.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  Makefile  README.md  Server.cpp  Server.hpp  Utils.cpp  Utils.hpp  WebServer.cpp  WebServer.hpp  WebSession.cpp  WebSession.hpp  autoindex.html  client  client_impl.cpp  config_sample  index2.html  main.cpp  main_new.cpp  old_main.cpp  server  test.cpp  webserv
cfg/: config_sample  server_config
cgi/: default_form_cgi.py  mycgi  set_cookie.py
error_pages/: 400.html  404.html  405.html
res/: data_from_client_id_1.txt
src/: Config.hpp  EventSelector.cpp  EventSelector.hpp  FdHandler.cpp  FdHandler.hpp  HttpMessage.cpp  HttpMessage.hpp  Location.cpp  Location.hpp  Request.cpp  Request.hpp  Response.cpp  Response.hpp  Utils.cpp  Utils.hpp  VirtualServer.cpp  VirtualServer.hpp  WebServer.cpp  WebServer.hpp  WebSession.cpp  WebSession.hpp  global_variables.hpp  webserv.cpp
system/: Config.hpp  EventSelector.cpp  EventSelector.hpp  FdHandler.cpp  FdHandler.hpp  HttpMessage.cpp  HttpMessage.hpp  HttpRequest.cpp  HttpRequest.hpp  HttpResponse.cpp  HttpResponse.hpp  LocationOptions.cpp  LocationOptions.hpp  Logger.hpp  ServerConfig.hpp  ServerOptions.cpp  ServerOptions.hpp  Utils.cpp  Utils.hpp  VirtualServer.cpp  VirtualServer.hpp  WebServer.cpp  WebServer.hpp  WebSession.cpp  WebSession.hpp  client_impl.cpp  webserv.cpp
(+12 files in other folders)
